--- a/22799_capmeter.ioc
+++ b/22799_capmeter.ioc
@@ -2,8 +2,9 @@
 ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_9
 ADC1.ContinuousConvMode=DISABLE
 ADC1.DataAlign=ADC_DATAALIGN_RIGHT
+ADC1.EnableAnalogWatchDog=false
 ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T2_CC2
-ADC1.IPParameters=Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,master,NbrOfConversion,ExternalTrigConv,DataAlign
+ADC1.IPParameters=Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,NbrOfConversion,ExternalTrigConv,DataAlign,master,EnableAnalogWatchDog
 ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-7\#ChannelRegularConversion=1
@@ -39,24 +40,28 @@ Mcu.Name=STM32F103C(4-6)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA0-WKUP
 Mcu.Pin1=PA1
-Mcu.Pin10=PB5
-Mcu.Pin11=PB6
-Mcu.Pin12=PB7
-Mcu.Pin13=VP_SYS_VS_ND
-Mcu.Pin14=VP_SYS_VS_Systick
-Mcu.Pin15=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin16=VP_TIM2_VS_ClockSourceINT
-Mcu.Pin17=VP_TIM2_VS_no_output2
-Mcu.Pin18=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin10=PA10
+Mcu.Pin11=PA11
+Mcu.Pin12=PB3
+Mcu.Pin13=PB4
+Mcu.Pin14=PB5
+Mcu.Pin15=PB6
+Mcu.Pin16=PB7
+Mcu.Pin17=VP_SYS_VS_ND
+Mcu.Pin18=VP_SYS_VS_Systick
+Mcu.Pin19=VP_TIM1_VS_ClockSourceINT
 Mcu.Pin2=PA2
+Mcu.Pin20=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM2_VS_no_output2
+Mcu.Pin22=VP_TIM3_VS_ClockSourceINT
 Mcu.Pin3=PA3
-Mcu.Pin4=PB1
-Mcu.Pin5=PA8
-Mcu.Pin6=PA9
-Mcu.Pin7=PA10
-Mcu.Pin8=PB3
-Mcu.Pin9=PB4
-Mcu.PinsNb=19
+Mcu.Pin4=PA4
+Mcu.Pin5=PA6
+Mcu.Pin6=PB0
+Mcu.Pin7=PB1
+Mcu.Pin8=PA8
+Mcu.Pin9=PA9
+Mcu.PinsNb=23
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32F103C6Tx
@@ -91,6 +96,8 @@ PA10.GPIOParameters=GPIO_Label
 PA10.GPIO_Label=RX
 PA10.Mode=Asynchronous
 PA10.Signal=USART1_RX
+PA11.Locked=true
+PA11.Signal=S_TIM1_CH4
 PA2.GPIOParameters=GPIO_PuPd,GPIO_Label
 PA2.GPIO_Label=move_down
 PA2.GPIO_PuPd=GPIO_PULLUP
@@ -101,6 +108,14 @@ PA3.GPIO_Label=move_up
 PA3.GPIO_PuPd=GPIO_PULLUP
 PA3.Locked=true
 PA3.Signal=GPIO_Input
+PA4.GPIOParameters=GPIO_PuPd,GPIO_Label
+PA4.GPIO_Label=vbus_present
+PA4.GPIO_PuPd=GPIO_PULLUP
+PA4.Locked=true
+PA4.Signal=GPIO_Input
+PA6.GPIOParameters=GPIO_Label
+PA6.GPIO_Label=battery_sense
+PA6.Signal=ADCx_IN6
 PA8.GPIOParameters=GPIO_Label
 PA8.GPIO_Label=FREQ_IN
 PA8.Signal=S_TIM1_CH1
@@ -108,6 +123,9 @@ PA9.GPIOParameters=GPIO_Label
 PA9.GPIO_Label=TX
 PA9.Mode=Asynchronous
 PA9.Signal=USART1_TX
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=sense_2v5
+PB0.Signal=ADCx_IN8
 PB1.GPIOParameters=GPIO_Label
 PB1.GPIO_Label=voltage_sense
 PB1.Signal=ADCx_IN9
@@ -218,20 +236,27 @@ RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
 RCC.TimSysFreq_Value=32000000
 RCC.USBFreq_Value=32000000
 RCC.VDD_VALUE=3.3
+SH.ADCx_IN6.0=ADC1_IN6,IN6
+SH.ADCx_IN6.ConfNb=1
+SH.ADCx_IN8.0=ADC1_IN8,IN8
+SH.ADCx_IN8.ConfNb=1
 SH.ADCx_IN9.0=ADC1_IN9,IN9
 SH.ADCx_IN9.ConfNb=1
 SH.GPXTI0.0=GPIO_EXTI0
 SH.GPXTI0.ConfNb=1
 SH.S_TIM1_CH1.0=TIM1_CH1,PWM_Input_1
 SH.S_TIM1_CH1.ConfNb=1
+SH.S_TIM1_CH4.0=TIM1_CH4,PWM Generation4 CH4
+SH.S_TIM1_CH4.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
 SPI1.CalculateBaudRate=16.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_1LINE
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
+TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
 TIM1.ICFilter_1=0
-TIM1.IPParameters=Prescaler,ICFilter_1
+TIM1.IPParameters=Prescaler,ICFilter_1,Channel-PWM Generation4 CH4
 TIM1.Prescaler=0
 TIM2.Channel-PWM\ Generation2\ No\ Output=TIM_CHANNEL_2
 TIM2.IPParameters=Prescaler,Channel-PWM Generation2 No Output
