--- a/22799_capmeter.ioc
+++ b/22799_capmeter.ioc
@@ -1,182 +1,172 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-7\#ChannelRegularConversion=ADC_CHANNEL_9
-ADC1.ContinuousConvMode=DISABLE
-ADC1.DataAlign=ADC_DATAALIGN_RIGHT
-ADC1.EnableAnalogWatchDog=false
-ADC1.EnableInjectedConversion=DISABLE
-ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T2_CC2
-ADC1.IPParameters=Rank-7\#ChannelRegularConversion,Channel-7\#ChannelRegularConversion,SamplingTime-7\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,NbrOfConversion,ExternalTrigConv,DataAlign,EnableAnalogWatchDog,EnableInjectedConversion,InjNumberOfConversion,master
-ADC1.InjNumberOfConversion=0
+ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_9
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,master
 ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
-ADC1.Rank-7\#ChannelRegularConversion=1
-ADC1.SamplingTime-7\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
+ADC1.Rank-0\#ChannelRegularConversion=1
+ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.Instance=DMA1_Channel1
-Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
 Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
 Dma.ADC1.0.Mode=DMA_NORMAL
 Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
 Dma.ADC1.0.PeriphInc=DMA_PINC_DISABLE
-Dma.ADC1.0.Priority=DMA_PRIORITY_HIGH
+Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.Request0=ADC1
 Dma.RequestsNb=1
+FREERTOS.FootprintOK=true
+FREERTOS.IPParameters=Tasks01,FootprintOK
+FREERTOS.Tasks01=mainTask,0,256,mainTaskFunction,As weak,NULL,Dynamic,NULL,NULL;buttonHandlerTa,1,128,buttonHandlerFunction,As external,NULL,Dynamic,NULL,NULL;adcCalibratorTa,0,128,adcCalibratorFunction,As external,NULL,Dynamic,NULL,NULL;batteryMonitor,2,128,batteryMonitorFunction,As external,NULL,Dynamic,NULL,NULL
 File.Version=6
 GPIO.groupedBy=Show All
 KeepUserPlacement=false
 Mcu.Family=STM32F1
 Mcu.IP0=ADC1
 Mcu.IP1=DMA
-Mcu.IP2=NVIC
-Mcu.IP3=RCC
-Mcu.IP4=SPI1
-Mcu.IP5=SYS
-Mcu.IP6=TIM1
-Mcu.IP7=TIM2
+Mcu.IP2=FREERTOS
+Mcu.IP3=NVIC
+Mcu.IP4=RCC
+Mcu.IP5=SPI1
+Mcu.IP6=SYS
+Mcu.IP7=TIM1
 Mcu.IP8=TIM3
-Mcu.IPNb=9
-Mcu.Name=STM32F103C(4-6)Tx
+Mcu.IP9=TIM4
+Mcu.IPNb=10
+Mcu.Name=STM32F103C(8-B)Tx
 Mcu.Package=LQFP48
 Mcu.Pin0=PA0-WKUP
 Mcu.Pin1=PA1
-Mcu.Pin10=PB3
-Mcu.Pin11=PB4
-Mcu.Pin12=PB5
-Mcu.Pin13=PB6
-Mcu.Pin14=PB7
-Mcu.Pin15=VP_ADC1_TempSens_Input
-Mcu.Pin16=VP_SYS_VS_ND
-Mcu.Pin17=VP_SYS_VS_Systick
-Mcu.Pin18=VP_TIM1_VS_ClockSourceINT
-Mcu.Pin19=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin10=PB10
+Mcu.Pin11=PB11
+Mcu.Pin12=PB4
+Mcu.Pin13=PB5
+Mcu.Pin14=PB6
+Mcu.Pin15=PB7
+Mcu.Pin16=VP_ADC1_Vref_Input
+Mcu.Pin17=VP_FREERTOS_VS_CMSIS_V1
+Mcu.Pin18=VP_SYS_VS_ND
+Mcu.Pin19=VP_SYS_VS_tim2
 Mcu.Pin2=PA2
-Mcu.Pin20=VP_TIM2_VS_no_output2
-Mcu.Pin21=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin20=VP_TIM1_VS_ClockSourceINT
+Mcu.Pin21=VP_TIM1_VS_no_output1
+Mcu.Pin22=VP_TIM3_VS_ClockSourceINT
+Mcu.Pin23=VP_TIM4_VS_ClockSourceINT
 Mcu.Pin3=PA3
 Mcu.Pin4=PA4
-Mcu.Pin5=PA6
-Mcu.Pin6=PB1
-Mcu.Pin7=PA8
-Mcu.Pin8=PA10
-Mcu.Pin9=PA11
-Mcu.PinsNb=22
+Mcu.Pin5=PA5
+Mcu.Pin6=PA6
+Mcu.Pin7=PA7
+Mcu.Pin8=PB0
+Mcu.Pin9=PB1
+Mcu.PinsNb=24
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
-Mcu.UserName=STM32F103C6Tx
+Mcu.UserName=STM32F103C8Tx
 MxCube.Version=6.2.0
 MxDb.Version=DB.6.0.20
-NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.DMA1_Channel1_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.EXTI0_IRQn=true\:0\:0\:false\:false\:true\:true\:true
+NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.DMA1_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
+NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
-NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.PendSV_IRQn=true\:0\:0\:false\:false\:true\:false\:false
+NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.MemoryManagement_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.NonMaskableInt_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+NVIC.PendSV_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:false
 NVIC.PriorityGroup=NVIC_PRIORITYGROUP_4
-NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-NVIC.SysTick_IRQn=true\:0\:0\:false\:false\:true\:false\:true
-NVIC.TIM3_IRQn=true\:0\:0\:false\:false\:true\:true\:true
-NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false
-PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultEXTI
-PA0-WKUP.GPIO_Label=power
-PA0-WKUP.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_RISING
+NVIC.SVCall_IRQn=true\:0\:0\:false\:false\:false\:false\:false\:false
+NVIC.SavedPendsvIrqHandlerGenerated=true
+NVIC.SavedSvcallIrqHandlerGenerated=true
+NVIC.SavedSystickIrqHandlerGenerated=true
+NVIC.SysTick_IRQn=true\:15\:0\:false\:false\:false\:true\:false\:true
+NVIC.TIM2_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:true
+NVIC.TimeBase=TIM2_IRQn
+NVIC.TimeBaseIP=TIM2
+NVIC.UsageFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
+PA0-WKUP.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
+PA0-WKUP.GPIO_Label=btn_power
+PA0-WKUP.GPIO_Mode=GPIO_MODE_INPUT
 PA0-WKUP.GPIO_PuPd=GPIO_PULLUP
 PA0-WKUP.Locked=true
-PA0-WKUP.Signal=GPXTI0
-PA1.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA1.GPIO_Label=MODE
+PA0-WKUP.Signal=GPIO_Input
+PA1.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
+PA1.GPIO_Label=btn_mode
+PA1.GPIO_Mode=GPIO_MODE_INPUT
 PA1.GPIO_PuPd=GPIO_PULLUP
 PA1.Locked=true
 PA1.Signal=GPIO_Input
-PA10.Signal=S_TIM1_CH3
-PA11.Locked=true
-PA11.Signal=S_TIM1_CH4
-PA2.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA2.GPIO_Label=move_down
+PA2.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
+PA2.GPIO_Label=btn_down
+PA2.GPIO_Mode=GPIO_MODE_INPUT
 PA2.GPIO_PuPd=GPIO_PULLUP
 PA2.Locked=true
 PA2.Signal=GPIO_Input
-PA3.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA3.GPIO_Label=move_up
+PA3.GPIOParameters=GPIO_PuPd,GPIO_Label,GPIO_Mode
+PA3.GPIO_Label=btn_up
+PA3.GPIO_Mode=GPIO_MODE_INPUT
 PA3.GPIO_PuPd=GPIO_PULLUP
 PA3.Locked=true
 PA3.Signal=GPIO_Input
 PA4.GPIOParameters=GPIO_PuPd,GPIO_Label
-PA4.GPIO_Label=vbus_present
+PA4.GPIO_Label=in_plugged
 PA4.GPIO_PuPd=GPIO_PULLUP
 PA4.Locked=true
 PA4.Signal=GPIO_Input
+PA5.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_Mode
+PA5.GPIO_Label=LCD_CLK
+PA5.GPIO_Mode=GPIO_MODE_AF_PP
+PA5.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA5.Mode=Simplex_Bidirectional_Master
+PA5.Signal=SPI1_SCK
 PA6.GPIOParameters=GPIO_Label
-PA6.GPIO_Label=battery_sense
+PA6.GPIO_Label=in_adc_batteryVoltage
 PA6.Signal=ADCx_IN6
-PA8.GPIOParameters=GPIO_Label
-PA8.GPIO_Label=FREQ_IN
-PA8.Signal=S_TIM1_CH1
+PA7.GPIOParameters=GPIO_Speed,GPIO_Label,GPIO_Mode
+PA7.GPIO_Label=LCD_DAT
+PA7.GPIO_Mode=GPIO_MODE_AF_PP
+PA7.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PA7.Mode=Simplex_Bidirectional_Master
+PA7.Signal=SPI1_MOSI
+PB0.GPIOParameters=GPIO_Label
+PB0.GPIO_Label=in_chargeCurrent
+PB0.Signal=ADCx_IN8
 PB1.GPIOParameters=GPIO_Label
-PB1.GPIO_Label=voltage_sense
+PB1.GPIO_Label=in_scope
 PB1.Signal=ADCx_IN9
-PB3.GPIOParameters=GPIO_Label
-PB3.GPIO_Label=LCD_SCK
-PB3.Mode=Simplex_Bidirectional_Master
-PB3.Signal=SPI1_SCK
-PB4.GPIOParameters=GPIO_Label
+PB10.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB10.GPIO_Label=LCD_DC
+PB10.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB10.GPIO_PuPd=GPIO_NOPULL
+PB10.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB10.Locked=true
+PB10.PinState=GPIO_PIN_RESET
+PB10.Signal=GPIO_Output
+PB11.GPIOParameters=GPIO_Speed,PinState,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
+PB11.GPIO_Label=LCD_RES
+PB11.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB11.GPIO_PuPd=GPIO_NOPULL
+PB11.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
+PB11.Locked=true
+PB11.PinState=GPIO_PIN_RESET
+PB11.Signal=GPIO_Output
+PB4.GPIOParameters=GPIO_Speed,GPIO_PuPd,GPIO_Label,GPIO_ModeDefaultOutputPP
 PB4.GPIO_Label=LCD_CS
+PB4.GPIO_ModeDefaultOutputPP=GPIO_MODE_OUTPUT_PP
+PB4.GPIO_PuPd=GPIO_NOPULL
+PB4.GPIO_Speed=GPIO_SPEED_FREQ_HIGH
 PB4.Locked=true
 PB4.Signal=GPIO_Output
 PB5.GPIOParameters=GPIO_Label
-PB5.GPIO_Label=LCD_MOSI
-PB5.Mode=Simplex_Bidirectional_Master
-PB5.Signal=SPI1_MOSI
+PB5.GPIO_Label=in_counter
+PB5.Signal=S_TIM3_CH2
 PB6.GPIOParameters=GPIO_Label
-PB6.GPIO_Label=LCD_DC
-PB6.Locked=true
-PB6.Signal=GPIO_Output
+PB6.GPIO_Label=LCD_BL
+PB6.Signal=S_TIM4_CH1
 PB7.GPIOParameters=GPIO_Label
-PB7.GPIO_Label=LCD_RES
-PB7.Locked=true
-PB7.Signal=GPIO_Output
-PCC.Checker=false
-PCC.Line=STM32F103
-PCC.MCU=STM32F103C(4-6)Tx
-PCC.PartNumber=STM32F103C6Tx
-PCC.Seq0=2
-PCC.Seq0.Step0.Average_Current=7.19 mA
-PCC.Seq0.Step0.CPU_Frequency=16 MHz
-PCC.Seq0.Step0.Category=In DS Table
-PCC.Seq0.Step0.DMIPS=20.0
-PCC.Seq0.Step0.Duration=0.1 ms
-PCC.Seq0.Step0.Frequency=8 MHz
-PCC.Seq0.Step0.Memory=FLASH
-PCC.Seq0.Step0.Mode=RUN
-PCC.Seq0.Step0.Oscillator=HSI PLL
-PCC.Seq0.Step0.Peripherals=ADC1 GPIOA GPIOB GPIOC GPIOD SPI1 TIM1
-PCC.Seq0.Step0.TaMax=103.7
-PCC.Seq0.Step0.User's_Consumption=0 mA
-PCC.Seq0.Step0.Vcore=No Scale
-PCC.Seq0.Step0.Vdd=3.3
-PCC.Seq0.Step0.Voltage_Source=Battery
-PCC.Seq0.Step1.Average_Current=11.7 \u00B5A
-PCC.Seq0.Step1.CPU_Frequency=0 Hz
-PCC.Seq0.Step1.Category=In DS Table
-PCC.Seq0.Step1.DMIPS=0.0
-PCC.Seq0.Step1.Duration=0.9 ms
-PCC.Seq0.Step1.Frequency=0 Hz
-PCC.Seq0.Step1.Memory=n/a
-PCC.Seq0.Step1.Mode=STOP
-PCC.Seq0.Step1.Oscillator=Regulator_LP
-PCC.Seq0.Step1.Peripherals=
-PCC.Seq0.Step1.TaMax=105
-PCC.Seq0.Step1.User's_Consumption=0 mA
-PCC.Seq0.Step1.Vcore=No Scale
-PCC.Seq0.Step1.Vdd=3.3
-PCC.Seq0.Step1.Voltage_Source=Battery
-PCC.Series=STM32F1
-PCC.Temperature=25
-PCC.Vdd=3.3
+PB7.GPIO_Label=out_charging
+PB7.Signal=S_TIM4_CH2
 PinOutPanel.RotationAngle=0
 ProjectManager.AskForMigrate=true
 ProjectManager.BackupPrevious=false
@@ -186,9 +176,9 @@ ProjectManager.CoupleFile=false
 ProjectManager.CustomerFirmwarePackage=
 ProjectManager.DefaultFWLocation=true
 ProjectManager.DeletePrevious=true
-ProjectManager.DeviceId=STM32F103C6Tx
+ProjectManager.DeviceId=STM32F103C8Tx
 ProjectManager.FirmwarePackage=STM32Cube FW_F1 V1.8.4
-ProjectManager.FreePins=false
+ProjectManager.FreePins=true
 ProjectManager.HalAssertFull=false
 ProjectManager.HeapSize=0x200
 ProjectManager.KeepUserCode=true
@@ -205,67 +195,64 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=Makefile
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_USART1_UART_Init-USART1-false-HAL-true,8-MX_TIM2_Init-TIM2-false-HAL-true,9-MX_TIM3_Init-TIM3-false-HAL-true
-RCC.ADCFreqValue=8000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-MX_DMA_Init-DMA-false-HAL-true,3-SystemClock_Config-RCC-false-HAL-false,4-MX_ADC1_Init-ADC1-false-HAL-true,5-MX_SPI1_Init-SPI1-false-HAL-true,6-MX_TIM1_Init-TIM1-false-HAL-true,7-MX_TIM3_Init-TIM3-false-HAL-true,8-MX_TIM4_Init-TIM4-false-HAL-true
+RCC.ADCFreqValue=14000000
 RCC.ADCPresc=RCC_ADCPCLK2_DIV4
-RCC.AHBFreq_Value=32000000
-RCC.APB1Freq_Value=32000000
-RCC.APB1TimFreq_Value=32000000
-RCC.APB2Freq_Value=32000000
-RCC.APB2TimFreq_Value=32000000
-RCC.FCLKCortexFreq_Value=32000000
+RCC.AHBFreq_Value=56000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV2
+RCC.APB1Freq_Value=28000000
+RCC.APB1TimFreq_Value=56000000
+RCC.APB2Freq_Value=56000000
+RCC.APB2TimFreq_Value=56000000
+RCC.FCLKCortexFreq_Value=56000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=32000000
-RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value,VDD_VALUE
-RCC.MCOFreq_Value=32000000
-RCC.PLLCLKFreq_Value=32000000
-RCC.PLLMCOFreq_Value=16000000
-RCC.PLLMUL=RCC_PLL_MUL8
-RCC.SYSCLKFreq_VALUE=32000000
+RCC.HCLKFreq_Value=56000000
+RCC.IPParameters=ADCFreqValue,ADCPresc,AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,MCOFreq_Value,PLLCLKFreq_Value,PLLMCOFreq_Value,PLLMUL,SYSCLKFreq_VALUE,SYSCLKSource,TimSysFreq_Value,USBFreq_Value
+RCC.MCOFreq_Value=56000000
+RCC.PLLCLKFreq_Value=56000000
+RCC.PLLMCOFreq_Value=28000000
+RCC.PLLMUL=RCC_PLL_MUL14
+RCC.SYSCLKFreq_VALUE=56000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.TimSysFreq_Value=32000000
-RCC.USBFreq_Value=32000000
-RCC.VDD_VALUE=3.3
+RCC.TimSysFreq_Value=56000000
+RCC.USBFreq_Value=56000000
 SH.ADCx_IN6.0=ADC1_IN6,IN6
 SH.ADCx_IN6.ConfNb=1
+SH.ADCx_IN8.0=ADC1_IN8,IN8
+SH.ADCx_IN8.ConfNb=1
 SH.ADCx_IN9.0=ADC1_IN9,IN9
 SH.ADCx_IN9.ConfNb=1
-SH.GPXTI0.0=GPIO_EXTI0
-SH.GPXTI0.ConfNb=1
-SH.S_TIM1_CH1.0=TIM1_CH1,PWM_Input_1
-SH.S_TIM1_CH1.ConfNb=1
-SH.S_TIM1_CH3.0=TIM1_CH3,PWM Generation3 CH3
-SH.S_TIM1_CH3.ConfNb=1
-SH.S_TIM1_CH4.0=TIM1_CH4,PWM Generation4 CH4
-SH.S_TIM1_CH4.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_2
-SPI1.CalculateBaudRate=16.0 MBits/s
+SH.S_TIM3_CH2.0=TIM3_CH2,PWM_Input_2
+SH.S_TIM3_CH2.ConfNb=1
+SH.S_TIM4_CH1.0=TIM4_CH1,PWM Generation1 CH1
+SH.S_TIM4_CH1.ConfNb=1
+SH.S_TIM4_CH2.0=TIM4_CH2,PWM Generation2 CH2
+SH.S_TIM4_CH2.ConfNb=1
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_4
+SPI1.CalculateBaudRate=14.0 MBits/s
 SPI1.Direction=SPI_DIRECTION_1LINE
-SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,BaudRatePrescaler
+SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-TIM1.Channel-PWM\ Generation3\ CH3=TIM_CHANNEL_3
-TIM1.Channel-PWM\ Generation4\ CH4=TIM_CHANNEL_4
-TIM1.ICFilter_1=0
-TIM1.IPParameters=Prescaler,ICFilter_1,Channel-PWM Generation4 CH4,Channel-PWM Generation3 CH3
-TIM1.Prescaler=0
-TIM2.Channel-PWM\ Generation2\ No\ Output=TIM_CHANNEL_2
-TIM2.IPParameters=Prescaler,Channel-PWM Generation2 No Output
-TIM2.Prescaler=0
-TIM3.IPParameters=Prescaler
-TIM3.Prescaler=1
-VP_ADC1_TempSens_Input.Mode=IN-TempSens
-VP_ADC1_TempSens_Input.Signal=ADC1_TempSens_Input
+TIM1.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
+TIM1.IPParameters=Channel-Output Compare1 No Output
+TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
+TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
+TIM4.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2
+VP_ADC1_Vref_Input.Mode=IN-Vrefint
+VP_ADC1_Vref_Input.Signal=ADC1_Vref_Input
+VP_FREERTOS_VS_CMSIS_V1.Mode=CMSIS_V1
+VP_FREERTOS_VS_CMSIS_V1.Signal=FREERTOS_VS_CMSIS_V1
 VP_SYS_VS_ND.Mode=No_Debug
 VP_SYS_VS_ND.Signal=SYS_VS_ND
-VP_SYS_VS_Systick.Mode=SysTick
-VP_SYS_VS_Systick.Signal=SYS_VS_Systick
+VP_SYS_VS_tim2.Mode=TIM2
+VP_SYS_VS_tim2.Signal=SYS_VS_tim2
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
-VP_TIM2_VS_ClockSourceINT.Mode=Internal
-VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
-VP_TIM2_VS_no_output2.Mode=PWM Generation2 No Output
-VP_TIM2_VS_no_output2.Signal=TIM2_VS_no_output2
+VP_TIM1_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM1_VS_no_output1.Signal=TIM1_VS_no_output1
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
+VP_TIM4_VS_ClockSourceINT.Mode=Internal
+VP_TIM4_VS_ClockSourceINT.Signal=TIM4_VS_ClockSourceINT
 board=custom
