Fixed capacitance measurement and fixed voltage measurement. FreeRTOS memory allocation is now static only.

--- a/22799_capmeter.ioc
+++ b/22799_capmeter.ioc
@@ -17,9 +17,11 @@ Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.Request0=ADC1
 Dma.RequestsNb=1
+FREERTOS.Events01=
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK
-FREERTOS.Tasks01=mainTask,0,256,mainTaskFunction,As weak,NULL,Dynamic,NULL,NULL;buttonHandlerTa,1,128,buttonHandlerFunction,As external,NULL,Dynamic,NULL,NULL;adcCalibratorTa,0,128,adcCalibratorFunction,As external,NULL,Dynamic,NULL,NULL;batteryMonitor,2,128,batteryMonitorFunction,As external,NULL,Dynamic,NULL,NULL
+FREERTOS.IPParameters=Tasks01,FootprintOK,MEMORY_ALLOCATION,Events01
+FREERTOS.MEMORY_ALLOCATION=1
+FREERTOS.Tasks01=mainTask,0,256,mainTaskFunction,As weak,NULL,Static,mainTaskBuffer,mainTaskControlBlock;buttonHandlerTa,1,128,buttonHandlerFunction,As external,NULL,Static,buttonHandlerTaBuffer,buttonHandlerTaControlBlock;adcCalibratorTa,0,128,adcCalibratorFunction,As external,NULL,Static,adcCalibratorTaBuffer,adcCalibratorTaControlBlock;batteryMonitor,2,128,batteryMonitorFunction,As external,NULL,Static,batteryMonitorBuffer,batteryMonitorControlBlock
 File.Version=6
 GPIO.groupedBy=Show All
 KeepUserPlacement=false
