--- a/22799_capmeter.ioc
+++ b/22799_capmeter.ioc
@@ -1,6 +1,7 @@
 #MicroXplorer Configuration settings - do not modify
 ADC1.Channel-0\#ChannelRegularConversion=ADC_CHANNEL_9
-ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,master
+ADC1.ExternalTrigConv=ADC_EXTERNALTRIGCONV_T1_CC1
+ADC1.IPParameters=Rank-0\#ChannelRegularConversion,Channel-0\#ChannelRegularConversion,SamplingTime-0\#ChannelRegularConversion,NbrOfConversionFlag,NbrOfConversion,master,ExternalTrigConv
 ADC1.NbrOfConversion=1
 ADC1.NbrOfConversionFlag=1
 ADC1.Rank-0\#ChannelRegularConversion=1
@@ -8,7 +9,7 @@ ADC1.SamplingTime-0\#ChannelRegularConversion=ADC_SAMPLETIME_1CYCLE_5
 ADC1.master=1
 Dma.ADC1.0.Direction=DMA_PERIPH_TO_MEMORY
 Dma.ADC1.0.Instance=DMA1_Channel1
-Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_HALFWORD
+Dma.ADC1.0.MemDataAlignment=DMA_MDATAALIGN_WORD
 Dma.ADC1.0.MemInc=DMA_MINC_ENABLE
 Dma.ADC1.0.Mode=DMA_NORMAL
 Dma.ADC1.0.PeriphDataAlignment=DMA_PDATAALIGN_HALFWORD
@@ -17,11 +18,10 @@ Dma.ADC1.0.Priority=DMA_PRIORITY_LOW
 Dma.ADC1.0.RequestParameters=Instance,Direction,PeriphInc,MemInc,PeriphDataAlignment,MemDataAlignment,Mode,Priority
 Dma.Request0=ADC1
 Dma.RequestsNb=1
-FREERTOS.Events01=
 FREERTOS.FootprintOK=true
-FREERTOS.IPParameters=Tasks01,FootprintOK,MEMORY_ALLOCATION,Events01
+FREERTOS.IPParameters=Tasks01,FootprintOK,MEMORY_ALLOCATION
 FREERTOS.MEMORY_ALLOCATION=1
-FREERTOS.Tasks01=mainTask,0,256,mainTaskFunction,As weak,NULL,Static,mainTaskBuffer,mainTaskControlBlock;buttonHandlerTa,1,128,buttonHandlerFunction,As external,NULL,Static,buttonHandlerTaBuffer,buttonHandlerTaControlBlock;adcCalibratorTa,0,128,adcCalibratorFunction,As external,NULL,Static,adcCalibratorTaBuffer,adcCalibratorTaControlBlock;batteryMonitor,2,128,batteryMonitorFunction,As external,NULL,Static,batteryMonitorBuffer,batteryMonitorControlBlock
+FREERTOS.Tasks01=mainTask,0,768,mainTaskFunction,As weak,NULL,Static,mainTaskBuffer,mainTaskControlBlock;buttonHandlerTa,1,256,buttonHandlerFunction,As external,NULL,Static,buttonHandlerTaBuffer,buttonHandlerTaControlBlock;adcCalibratorTa,0,256,adcCalibratorFunction,As external,NULL,Static,adcCalibratorTaBuffer,adcCalibratorTaControlBlock;batteryMonitor,2,256,batteryMonitorFunction,As external,NULL,Static,batteryMonitorBuffer,batteryMonitorControlBlock
 File.Version=6
 GPIO.groupedBy=Show All
 KeepUserPlacement=false
@@ -70,7 +70,7 @@ Mcu.UserName=STM32F103C8Tx
 MxCube.Version=6.2.0
 MxDb.Version=DB.6.0.20
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
-NVIC.DMA1_Channel1_IRQn=true\:5\:0\:false\:false\:true\:true\:false\:true
+NVIC.DMA1_Channel1_IRQn=true\:5\:0\:false\:false\:true\:false\:false\:true
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
 NVIC.ForceEnableDMAVector=true
 NVIC.HardFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false
@@ -236,8 +236,8 @@ SPI1.Direction=SPI_DIRECTION_1LINE
 SPI1.IPParameters=VirtualType,Mode,Direction,BaudRatePrescaler,CalculateBaudRate
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
-TIM1.Channel-Output\ Compare1\ No\ Output=TIM_CHANNEL_1
-TIM1.IPParameters=Channel-Output Compare1 No Output
+TIM1.Channel-PWM\ Generation1\ No\ Output=TIM_CHANNEL_1
+TIM1.IPParameters=Channel-PWM Generation1 No Output
 TIM4.Channel-PWM\ Generation1\ CH1=TIM_CHANNEL_1
 TIM4.Channel-PWM\ Generation2\ CH2=TIM_CHANNEL_2
 TIM4.IPParameters=Channel-PWM Generation1 CH1,Channel-PWM Generation2 CH2
@@ -251,7 +251,7 @@ VP_SYS_VS_tim2.Mode=TIM2
 VP_SYS_VS_tim2.Signal=SYS_VS_tim2
 VP_TIM1_VS_ClockSourceINT.Mode=Internal
 VP_TIM1_VS_ClockSourceINT.Signal=TIM1_VS_ClockSourceINT
-VP_TIM1_VS_no_output1.Mode=Output Compare1 No Output
+VP_TIM1_VS_no_output1.Mode=PWM Generation1 No Output
 VP_TIM1_VS_no_output1.Signal=TIM1_VS_no_output1
 VP_TIM3_VS_ClockSourceINT.Mode=Internal
 VP_TIM3_VS_ClockSourceINT.Signal=TIM3_VS_ClockSourceINT
